Project

General

Profile

Actions

Bug #9270

closed

uts/i86pc: amd_iommu this statement may fall through

Added by Toomas Soome over 5 years ago. Updated over 5 years ago.

Status:
Closed
Priority:
Normal
Assignee:
Category:
driver - device drivers
Start date:
2018-03-12
Due date:
% Done:

100%

Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
External Bug:

Description

Issue found by gcc 7 build:

    ../../i86pc/io/amd_iommu/amd_iommu_acpi.c: In function 'add_deventry_info':
    ../../i86pc/io/amd_iommu/amd_iommu_acpi.c:551:3: error: this statement may fall through [-Werror=implicit-fallthrough=]
       cmn_err(CE_PANIC, "%s: Unexpected Range End Deventry",
       ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
           amd_iommu_modname);
           ~~~~~~~~~~~~~~~~~~
    ../../i86pc/io/amd_iommu/amd_iommu_acpi.c:554:2: note: here
      case DEVENTRY_ALIAS_SELECT:
      ^~~~
    ../../i86pc/io/amd_iommu/amd_iommu_acpi.c:588:7: error: this statement may fall through [-Werror=implicit-fallthrough=]
       idx = AMD_IOMMU_ACPI_INFO_HASH_SZ;
    ../../i86pc/io/amd_iommu/amd_iommu_acpi.c:589:2: note: here
      default:
      ^~~~~~~
    cc1: all warnings being treated as errors

Actions #1

Updated by Electric Monk over 5 years ago

  • Status changed from In Progress to Closed
  • % Done changed from 90 to 100

git commit 7d86488a35d4587500da1cb695e92b52b35fd253

commit  7d86488a35d4587500da1cb695e92b52b35fd253
Author: Toomas Soome <tsoome@me.com>
Date:   2018-04-23T16:15:39.000Z

    9270 uts/i86pc: amd_iommu this statement may fall through
    Reviewed by: Yuri Pankov <yuripv@yuripv.net>
    Reviewed by: Andy Fiddaman <omnios@citrus-it.co.uk>
    Approved by: Hans Rosenfeld <rosenfeld@grumpf.hope-2000.org>

Actions

Also available in: Atom PDF